--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libuv-dev
+  - ./install-libuv.sh
 rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.2
+  - 2.2.1
   - rbx-2.2.10
