on travis, try to load the shared library

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ rvm:
   - rbx-2.2.10
 script:
   - "rake compile -- --with-uv-dir=$PWD/libuv --with-uv-lib=$PWD/libuv"
-  - rake spec
+  - "LD_LIBRARY_PATH=$PWD/libuv/lib rake spec"
