explicitly set LD_LIBRARY_PATH on travis build
should fix the remaining build erros

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ rvm:
   - rbx-2.2.10
 script:
   - "rake compile -- --with-uv-dir=$PWD/libuv/pkg"
-  - "rake spec"
+  - "LD_LIBRARY_PATH=$PWD/libuv/pkg/lib rake spec"
