--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ rvm:
   - 2.2
   - rbx-2
 script:
-  - "LD_RUN_PATH=$PWD/libuv/pkg/lib bundle exec rake clean compile -- --with-uv-dir=$PWD/libuv/pkg"
-  - "LD_LIBRARY_PATH=$PWD/libuv/pkg/lib bundle exec rake spec"
+  - "bundle exec rake clean compile -- --with-uv-dir=$PWD/libuv/pkg/lib --with-uv-include=$PWD/libuv/pkg/include"
+  - "bundle exec rake spec"
